kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: http-request-hpa
  labels:
    app: nodejs-app

spec:
  type: ClusterIP

  selector:
    app: nodejs-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
